--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 * {
 	padding: 0;
@@ -6,12 +7,12 @@
 	font-family: 'DM Sans', sans-serif;
 }
 
-body {
+.login-body {
 	display: flex;
 	justify-content: center;
 	align-items:center;
 	min-height: 100vh;
-	background: url('../19.jpg') no-repeat;
+	background: url('/19.jpg') no-repeat;
 	background-size: cover;
 	background-position: center;
 }
@@ -24,6 +25,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: 15px 30px;
 	z-index: 99;
 }
 .logo {
@@ -131,7 +133,6 @@ header {
 	font-size: 2em;
 	color: #fff;
 	text-align: center;
-	margin-bottom: 20px;
 	
 }
 .details{
@@ -204,11 +205,10 @@ header {
 	z-index: 1;
 	
 }
-/*.navigation-body{
-	display: flex;
-	background: url('../19.jpg');
-}*/
-
+.navigation-body{
+	display:flex;
+	background: url('/19.jpg');
+}
 .u-name {
 	font-size: 32px;
 	color: #fff;
@@ -240,7 +240,20 @@ header {
 	padding: 5px 0;
 
 }
-
+.side-bar {
+	width: 435px;
+	height: 435px;
+	transition: 500ms width;
+	background: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.5);
+	border-radius: 20px;
+	backdrop-filter: blur(30px);
+	box-shadow: 0 25px 50px rgba(0,0,0,0.2);
+	position: absolute;
+	margin-top: 60px;
+	margin-left: 20px;
+	margin-bottom: 100px;
+}
 
 .section-1 {
 	width: 100%;
@@ -251,7 +264,6 @@ header {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	transition: 500ms background;
 }
 .section-1 h1 {
 	color: #fff;
@@ -264,72 +276,33 @@ header {
 	padding: 7px;
 	border-radius: 5px;
 }
-.side-bar {
-	width: 435px;
-	height: 435px;
-	transition: 500ms width;
-	background: transparent;
-	border: 2px solid rgba(255, 255, 255, 0.5);
-	border-radius: 20px;
-	backdrop-filter: blur(30px);
-	box-shadow: 0 25px 50px rgba(0,0,0,0.2);
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	margin-left: 25px;
-	margin-top: 60px;
-	align-items: center;
-
-}
 .side-bar ul {
-	list-style: none;
-	padding: 6px 14px;
 	margin-top: 20px;
+	list-style: none;
 
 }
 .side-bar ul li {
 	font-size: 16px;
-	padding: 15px 0;
+	padding: 15px 0px;
 	padding-left: 18px;
 	transition: 500ms background;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	margin: 10px 0;
-	border-radius: 6px;
-	
 }
 .side-bar ul li:hover {
-	background: rgba(255, 255, 255, 0.5);
-	border-radius: 6px;
+	background: #000000;
 }
-.side-bar .active a {
-   background: transparent;
-}
-.side-bar .active a i {
-	background : transparent;
-}
-.side-bar ul .active:hover {
-	background:  rgba(255, 255, 255, 0.5);	
-
-}
-
 .side-bar ul li a {
 	text-decoration: none;
 	color: #eee;
 	cursor: pointer;
 	letter-spacing: 1px;
-	display: flex;
-	align-items: center;
-	font-size: 18px;
-
 }
 .side-bar ul li a i {
 	display: inline;
 	padding-right: 10px;
 	font-size: 23px;
-	text-align: center;
-
 }
 #navbtn {
 	display: inline-block;
@@ -342,266 +315,11 @@ header {
 	display: none;
 }
 #checkbox:checked ~ .body .side-bar {
-	width: 95px;
-	
+	width: 60px;
 }
-#checkbox:checked ~ .body .option-box{
-	transition: transform 0.5s ease;
-	transform: translateX(-25%);
-
+#checkbox:checked ~ .body .side-bar .user-p{
+	visibility: hidden;
 }
-
 #checkbox:checked ~ .body .side-bar a span{
 	display: none;
-}
-.alert{
-   
-	font-size: 16px;
-	color: #fff;
-
-}
-
-.contact-box{
-	position: relative;
-	width: 600px;
-	height: 400px;
-	background: transparent;
-	border: 2px solid rgba(255, 255, 255, 0.5);
-	border-radius: 20px;
-	backdrop-filter: blur(30px);
-	box-shadow: 0 25px 50px rgba(0,0,0,0.2);
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	text-align: center;
-	padding: 14px 14px;
-	transition: transform 0.2s ease;
-
-
-}
-.contact-box h3{
-
-	font-size: 30px;
-	color: #fff;
-	text-align:left;
-	margin-bottom: 20px;
-
-
-}
-
-.option-box {
-
-	position: relative;
-	width: 1000px;
-	height: 800px;
-	background: transparent;
-	border: 2px solid rgba(255, 255, 255, 0.5);
-	border-radius: 20px;
-	backdrop-filter: blur(30px);
-	box-shadow: 0 25px 50px rgba(0,0,0,0.2);
-	padding: 40px 40px;
-	margin-left: 250px;
-
-}
-
-.option-box .title a{
-	width: 300px;
-	height: 250px;
-	position: relative;
-	background: transparent;
-	border: 2px solid #fff;
-	border-radius: 8px;
-	outline: none;
-	font-size: 20px;
-	cursor: pointer;
-	color: #fff;
-	font-weight: 500;
-	text-decoration: none;
-
-}
-
-.option-box .title-2 {
-    margin-bottom: 10px;
-}
-
-.option-box  .title{
-	margin-bottom: 10px;
-
-}
-
-#checkbox {
-	display: none;
-}
-
-#checkbox:checked ~ .body .contact-box{
-	transition: transform 0.5s ease;
-	transform: translateX(-25%);
-	transform: scale(1);
-
-}
-.option-box .title a{
-
-	width: fit-content;
-	height: fit-content;
-	background: transparent;
-	outline: none;
-	font-size: 20px;
-	cursor: pointer;
-	color: #fff;
-	font-weight: 500;
-	display: inline-block;
-	text-decoration: none;
-	text-align: center;
-	padding: 10px 15px;
-
-}
-.option-box h4{
-	font-weight: 500;
-	color: #fff;
-	font-size: 20px;
-	text-align: center;
-	
-}
-
-  
-.main-table {
-	width: 915px;
-	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-  }
-  .main-table th, .main-table td {
-	padding: 15px;
-	background-color: rgba(255,255,255,0.2);
-	color: #fff;
-  }
-  
-  .main-table th {
-	text-align: left;
-  }
-  
-  .main-table thead {
-	 th {
-	  background-color: #55608f;
-	  border: #eee; 
-	}
-  }
-  
-.main-table tbody {
-	tr {
-	  &:hover {
-		background-color: rgba(255,255,255,0.3);
-	  }
-	}
-    .main-table  td {
-	  position: relative;
-	  &:hover {
-		&:before {
-		  content: "";
-		  position: absolute;
-		  left: 0;
-		  right: 0;
-		  top: -9999px;
-		  bottom: -9999px;
-		  background-color: rgba(255,255,255,0.2);
-		  z-index: -1;
-		}
-	  }
-	}
-}
-.edit-btn {
-	width: 130px;
-	height: 50px;
-	position: fixed;
-	position: relative;
-	background: transparent;
-	border: 2px solid #fff;
-	border-radius: 8px;
-	outline: none;
-	font-size: 17px;
-	cursor: pointer;
-	color: #fff;
-	font-weight: 500;
-	text-decoration: none;
-	padding: 10px 15px;
-}
-.delete-btn {
-	width: fit-content;
-	height: fit-content;
-	position: fixed;
-	position: relative;
-	background: transparent;
-	border: 2px solid #fff;
-	border-radius: 8px;
-	outline: none;
-	font-size: 17px;
-	cursor: pointer;
-	color: #fff;
-	font-weight: 500;
-	text-decoration: none;
-	padding: 10px 15px;
-	
-
-}
-.delete-btn:before {
-		content: "";
-		position: absolute;
-		left: 0;
-		top: 0;
-		background-color: #da1a32;
-		width: 100%;
-		height: 100%;
-		-webkit-transform: scale(0);
-		transform: scale(0);
-		opacity: 0;
-		transition: opacity 0.3s, -webkit-transform 0.3s;
-		transition: transform 0.3s, opacity 0.3s;
-		transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-		z-index: 30;
-	}
-
-.option-box .input-1 {
-		
-		width: 800px;
-		background-color: transparent;
-		padding: 10px;
-		font-size: 15px;
-		outline: none;
-		display: block;
-		border: transparent;
-		color: #fff;
-		font-size: 20px;
-		border-bottom: 2px solid #fff;
-}
-.option-box .input-1:focus{
-	background-color: rgba(255,255,255,0.2);
-	border-color: #fff;
-	border-radius: 6px;
-}
-.option-box .info{
-
-	color:#fff;
-	font-size: 20px;
-
-}
-.info .input-holder label{
-	display: block;
-	margin-bottom: 5px;
-}
-.option-box .form-1{
-	width: 90%;
-	max-width: 800px;
-	margin-top: 30px;
-}
-.danger{
-
-	font-size: 16px;
-	color: #fff;
-}
-.success{
-	font-size: 20px;
-	color: #fff;
-	margin-bottom: 25px;
-	border: #fff;
-
 }
